[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renet = "0.0.8"
bevy_renet = "0.0.3"
serde = { version = "1.0.0", features = [ "derive" ] } 
bevy = { version = "0.7.0", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_pbr", "x11"] }
bincode = "1.3.1"